# grade-calculator

./: README.md  pyproject.toml
gc/: calulate.py  cli.py
